[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/fasefinal.gd" type="Script" id=1]
[ext_resource path="res://HandWriting.otf" type="DynamicFontData" id=2]
[ext_resource path="res://imagens/github.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19, 20.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512.75, 3.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3.5, 302 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 281.798, 273.86 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 82.5, 27.5 )

[node name="fasefinal" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 94.0
margin_top = 35.0
margin_right = 914.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
text = "fa√ßa o Godot chegar ao Github"
align = 1
autowrap = true

[node name="godot" type="KinematicBody2D" parent="."]
position = Vector2( 33, 40 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="godot"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="godot"]
position = Vector2( -0.5, 0.5 )
scale = Vector2( 0.765625, 0.765625 )
texture = ExtResource( 4 )

[node name="tela1" type="StaticBody2D" parent="."]
position = Vector2( 513, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="tela1"]
position = Vector2( -0.25, -5.5 )
shape = SubResource( 3 )

[node name="tela2" type="StaticBody2D" parent="."]
position = Vector2( 1029, 301 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="tela2"]
position = Vector2( -1, 0 )
shape = SubResource( 4 )

[node name="tela3" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="tela3"]
position = Vector2( 514, 606 )
shape = SubResource( 3 )

[node name="tela4" type="StaticBody2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="tela4"]
position = Vector2( -2.5, 301 )
shape = SubResource( 4 )

[node name="GIthub" type="Sprite" parent="."]
position = Vector2( 986, 557 )
scale = Vector2( 0.125977, 0.125977 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="GIthub"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GIthub/Area2D"]
position = Vector2( -11.9087, -3.96973 )
shape = SubResource( 5 )

[node name="github" type="Area2D" parent="."]
position = Vector2( 776, 62 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="github"]
position = Vector2( 9, -3 )
shape = SubResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="GIthub/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="github" to="." method="_on_github_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
